<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Movie Viewer</string>
    <string name="search_hint">Movie title</string>
    <string name="title_activity_in_theater">Movies in Theater</string>
    <string name="title_activity_dvd">Movies in DVD</string>
    <string name="title_activity_movie_detail">Movie Info</string>
    <string name="title_activity_movie_search">Movie Search Results</string>
    
    <string name="action_settings">Settings</string>
    <string name="action_search">Searh</string>
    <string name="action_refresh">Refresh</string>
    
    <string name="title">Title</string>
    <string name="release_date">Release Date</string>
    <string name="rating">Rating</string>
    <string name="cast1">Cast1</string>
    <string name="cast2">Cast2</string>
    <string name="director">Director</string>
    <string name="directedby">Directed by</string>
    <string name="critics_score">Critics Score</string>
    <string name="audience_score">Audience Score</string>
    <string name="synopsis">Synopsis</string>
    
    <string name="no_review">No review yet</string>
    
    <string name="critic">Critic</string>
    <string name="date">Date</string>
    <string name="publication">Publication</string>
    <string name="quote">Quote</string>
    
    <string name="title_boxoffice">Box Office</string>
    <string name="title_opening">Opening</string>
    <string name="title_intheaters">In Theaters</string>
    <string name="title_upcoming">Upcoming</string>

</resources>
