<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:jelly="http://schemas.android.com/apk/res/com.jelly.app.movieviewer"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="2dip" >

    <!-- Critics, publication -->
    <com.jelly.lib.view.JTextView
        android:id="@+id/tvCritics"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop ="2dip"
        android:layout_marginLeft="5dip"
        android:text="@string/critic"
        android:textColor="#040404"
        android:textSize="12dip"
        android:textStyle="bold"
        android:typeface="sans" 
       	jelly:data_field="critic"/>
    
    <TextView 
        android:id="@+id/tvAt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/tvCritics"
        android:paddingTop="2dip"
        android:text=" @ "
        android:textColor="#343434"
        android:textSize="12dip" />
   
    <com.jelly.lib.view.JTextView
        android:id="@+id/tvPublication"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/tvAt"
        android:paddingTop ="2dip"
        android:text="@string/publication"
        android:textColor="#040404"
        android:textSize="12dip"
        android:textStyle="bold"
        android:typeface="sans" 
       	jelly:data_field="publication"/>

   	<!-- Freshness -->
   	 <com.jelly.app.movieviewer.JScoreImageView
        android:id="@+id/ivFreshness"
	    android:layout_height="wrap_content"
	    android:layout_width="wrap_content"
	    android:layout_below="@+id/tvCritics"
	    android:layout_alignLeft="@+id/tvCritics"
	    android:paddingTop="4dip"
	    android:layout_marginLeft="5dip"
	    android:focusable="false"
        android:focusableInTouchMode="false"
	    android:src="@drawable/fresh_tomatoe_mob"
	    jelly:data_field="freshness"/>

    <!-- Spaces -->
    <TextView 
        android:id="@+id/tvSpace"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvCritics"
        android:layout_toRightOf="@+id/ivFreshness"
        android:paddingTop="2dip"
        android:text=" "
        android:textColor="#343434"
        android:textSize="12dip" />
    
	<com.jelly.lib.view.JTextView
        android:id="@+id/tvQuote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvCritics"
        android:layout_toRightOf="@+id/tvSpace"
        android:paddingTop ="2dip"
        android:text="@string/quote"
        android:textColor="#040404"
        android:textSize="12dip"
        android:typeface="sans" 
       	jelly:data_field="quote"/>

</RelativeLayout>